--- a/UTS-Assig3/Base.lproj/Main.storyboard
+++ b/UTS-Assig3/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="150" y="328.5" width="75" height="30"/>
                                 <state key="normal" title="Start quizz"/>
                                 <connections>
-                                    <segue destination="wkm-rG-df8" kind="show" id="j0t-D4-e6f"/>
+                                    <segue destination="V6q-qW-j3O" kind="show" identifier="home2SubjectPicker" id="j0t-D4-e6f"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="egd-I2-hmb">
@@ -34,7 +34,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="jump to question 1"/>
                                 <connections>
-                                    <segue destination="JVF-ur-Eu8" kind="show" id="Hc9-wr-COT"/>
+                                    <segue destination="JVF-ur-Eu8" kind="show" identifier="home2question" id="Hc9-wr-COT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -84,32 +84,26 @@
                                 <state key="normal" title="GO!"/>
                                 <connections>
                                     <action selector="myGoButton:" destination="wkm-rG-df8" eventType="touchUpInside" id="cli-ha-82r"/>
-                                    <segue destination="TW6-ns-JvL" kind="show" id="qtV-JB-nEd"/>
+                                    <segue destination="TW6-ns-JvL" kind="show" identifier="subject2questions" id="qtV-JB-nEd"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f8W-tL-tPs">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="ihb-ka-OKw"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="K1j-eD-rbB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="daO-km-cOJ"/>
                     <connections>
                         <outlet property="myPicker" destination="Q5d-tt-7Cb" id="hka-RH-tXP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0K-Iw-w9v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1086" y="814"/>
+            <point key="canvasLocation" x="815" y="813"/>
         </scene>
-        <!--Table View Controller-->
+        <!--My QuestionsTVC-->
         <scene sceneID="Zkr-ER-dmK">
             <objects>
-                <tableViewController id="TW6-ns-JvL" sceneMemberID="viewController">
+                <tableViewController id="TW6-ns-JvL" customClass="myQuestionsTVC" customModule="UTS_Assig3" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QpW-ad-Hva">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -139,7 +133,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="JVF-ur-Eu8" kind="show" id="ObP-cK-fYs"/>
+                                    <segue destination="JVF-ur-Eu8" kind="show" identifier="questions2question" id="ObP-cK-fYs"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -148,15 +142,18 @@
                             <outlet property="delegate" destination="TW6-ns-JvL" id="fED-PA-1Xh"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="thisTV" destination="QpW-ad-Hva" id="sM9-4G-jCu"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lq0-kp-1mG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1953" y="691"/>
+            <point key="canvasLocation" x="1599" y="813"/>
         </scene>
-        <!--View Controller-->
+        <!--The QuestionVC-->
         <scene sceneID="Bru-OV-iNI">
             <objects>
-                <viewController id="JVF-ur-Eu8" sceneMemberID="viewController">
+                <viewController id="JVF-ur-Eu8" customClass="theQuestionVC" customModule="UTS_Assig3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R7z-ML-byU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -168,27 +165,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="THIS IS QUSTION TEXT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qW4-UY-zev">
-                                <rect key="frame" x="77" y="186" width="182" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UoK-2L-iOv">
+                                <rect key="frame" x="138" y="259" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="Answer 1"/>
+                                <connections>
+                                    <action selector="selectAnswer:" destination="JVF-ur-Eu8" eventType="touchUpInside" id="Z2l-bF-jxE"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fzc-yq-tY5">
                                 <rect key="frame" x="138" y="297" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Answer 2"/>
+                                <connections>
+                                    <action selector="selectAnswer:" destination="JVF-ur-Eu8" eventType="touchUpInside" id="vBf-hC-gDh"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GLs-kP-bCP">
                                 <rect key="frame" x="138" y="335" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Answer 3"/>
+                                <connections>
+                                    <action selector="selectAnswer:" destination="JVF-ur-Eu8" eventType="touchUpInside" id="PTY-Fp-Aq4"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcN-BK-krf">
                                 <rect key="frame" x="138" y="373" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Answer 4"/>
+                                <connections>
+                                    <action selector="selectAnswer:" destination="JVF-ur-Eu8" eventType="touchUpInside" id="r2G-rE-Vj6"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="THE CORRECT ANSWER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URJ-4H-9TQ">
                                 <rect key="frame" x="77" y="551" width="189" height="21"/>
@@ -200,23 +207,55 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jeE-fP-x5U">
                                 <rect key="frame" x="16" y="425" width="343" height="242"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UoK-2L-iOv">
-                                <rect key="frame" x="138" y="259" width="98" height="30"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aU6-mF-vTn">
+                                <rect key="frame" x="67" y="140" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Answer 1"/>
-                            </button>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="8eW-IA-kcJ"/>
                     </view>
+                    <connections>
+                        <outlet property="answerCover" destination="jeE-fP-x5U" id="tQT-j3-ger"/>
+                        <outlet property="answerFour" destination="xcN-BK-krf" id="i5x-fW-4mv"/>
+                        <outlet property="answerOne" destination="UoK-2L-iOv" id="Rrh-uz-bLY"/>
+                        <outlet property="answerThree" destination="GLs-kP-bCP" id="5D6-b5-WoL"/>
+                        <outlet property="answerTwo" destination="Fzc-yq-tY5" id="hcC-XW-yKb"/>
+                        <outlet property="correctAnswer" destination="URJ-4H-9TQ" id="0bw-3b-oel"/>
+                        <outlet property="questionTitle" destination="Cbo-ce-09j" id="VUG-9g-VV5"/>
+                        <outlet property="theQuestion" destination="aU6-mF-vTn" id="Q1U-UK-lPI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z2v-mf-bRC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2794" y="45"/>
+            <point key="canvasLocation" x="3343" y="0.0"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6lP-T4-nIr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V6q-qW-j3O" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bd5-KZ-XVR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wkm-rG-df8" kind="relationship" relationship="rootViewController" id="HC0-Uh-98Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g1m-DX-KG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="60" y="813"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Hc9-wr-COT"/>
+        <segue reference="ObP-cK-fYs"/>
     </inferredMetricsTieBreakers>
 </document>
